finished book component and list

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300|Pacifico');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,600|Pacifico');
 body {
   margin: 0;
   padding: 0;
   font-family: 'Open Sans', sans-serif;
-  background-color: #fafafa;
+  background-color: #F2F2F2;
 }
 
 
@@ -108,6 +108,105 @@ body {
 .icon--wish {
   background-image: url('./assets/img/heart.png');
 }
+
+/**
+ * Book Component
+ */
+.book {
+  background-color: #fff;
+  display: inline-block;
+  margin: 1rem;
+  box-shadow: 0px 3px 8px -4px rgba(0, 0, 0, 0.15);
+  position: relative;
+}
+.book__price {
+  background-color: #9C66FF;
+  display: inline-block;
+  position: absolute;
+  right: 0;
+  width: 2rem;
+  text-align: center;
+  line-height: 2rem;
+  color: white;
+  padding: 0.5rem;
+  font-weight: 600;
+  box-shadow: -2px 2px 8px 1px rgba(0, 0, 0, 0.15)
+}
+.book__price:before {
+  content: "$";
+}
+.book__card {
+  height: 400px;
+  display: inline-block;
+}
+.book__cover {
+  width: 75%;
+  margin: 10% auto;
+  height: 80%;
+  display: block;
+  /*background-image: url("./assets/img/books/2.jpg");*/
+  background-position: center;
+  background-size: cover;
+}
+.book__details {
+  width: 75%;
+  margin: 0 auto;
+  font-size: 1.4rem;
+  line-height: 1.6rem;
+  opacity: 0.5;
+}
+.book__details p {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.book__details .details--title {
+  font-weight: 600;
+}
+
+.book-utils {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+  margin-top: 1rem;
+}
+.book-utils__tag {}
+.book-utils__tag::before {
+  content: "# "
+}
+.book-utils__actions {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.book-utils__icon {
+  width: 1.5rem;
+  height: 1.5rem;
+  margin-left: 0.3rem;
+  background-position: center;
+  background-size: cover;
+  display: inline-block;
+}
+.book-utils__icon.icon--wish-small {
+  background-image: url('./assets/img/heart.png');
+}
+.book-utils__icon.icon--buy-small {
+  background-image: url('./assets/img/cart.png');
+}
+.book-utils__likes {
+  margin: 0 0.3rem;
+}
+
+.book-list {
+  width: 80%;
+  margin: auto;
+}
+.book-list__cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 
 /* TODO: searchbox in center */
 /* TODO: New serch icon as background */
