--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6, p {
+h1, h2, h3, h4, h5, h6, p, input{
   font-family: 'Open Sans', sans-serif;
 }
 
@@ -459,4 +459,82 @@ h1, h2, h3, h4, h5, h6, p {
 .comment__content {
   font-size: 0.9rem;
   line-height: 1rem;
+}
+
+
+/**
+ * Register Component
+ */
+
+.register {
+  width: 80%;
+  max-width: 900px;
+  margin: 3rem auto;
+  background: #fff;
+  padding: 2rem;
+  padding-bottom: 6rem;
+  position: relative;
+}
+.register__form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.form__header {
+  font-size: 2rem;
+  line-height: 3rem;
+  margin-bottom: 2rem;
+}
+.form__label {
+  margin-top: 1rem;
+  opacity: 0.5;
+}
+.form__input {
+  background-color: #fafafa;
+  width: 40%;
+  height: 2rem;
+  padding: 0.5rem 0.8rem;
+  margin: 1rem 0;
+  border: rgba(0, 0, 0, 0.1) 1px solid;
+  border-radius: 3px;
+  font-size: 1rem;
+}
+
+.form__input.input--file {
+  display: none;
+}
+.form__label.label--file {
+  background-color: #ffc666;
+  color: #fff;
+  text-align: center;
+  font-weight: 600;
+  padding: 1rem;
+  width: 7rem;
+  opacity: 1;
+  position: relative;
+  cursor: pointer;
+  margin: 10rem 0 2rem 0;
+}
+.form__label.label--file::before {
+  content: "";
+  position: absolute;
+  top: -8rem;
+  right: 0;
+  width: 100%;
+  height: 8rem;
+  background-image: url('./assets/img/profile.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.form__input.input--submit {
+  position: absolute;
+  bottom: -1rem;
+  width: 100%;
+  border: none;
+  height: 4.5rem;
+  color: #fff;
+  font-weight: 600;
+  font-size: 1.4rem;
+  background-color: #b48ff9;
 }
