--- a/src/index.css
+++ b/src/index.css
@@ -475,7 +475,8 @@ h1, h2, h3, h4, h5, h6, p, input{
   padding-bottom: 6rem;
   position: relative;
 }
-.register__form {
+.register__form,
+.login__form {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -537,4 +538,29 @@ h1, h2, h3, h4, h5, h6, p, input{
   font-weight: 600;
   font-size: 1.4rem;
   background-color: #b48ff9;
+  cursor: pointer;
+}
+.form__text {
+  margin-top: 1rem;
+  opacity: 0.8;
+}
+.form__text a {
+  color: #9C66FF;
+}
+.login {
+  position: fixed;
+  top: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  justify-content: center;
+  align-items: center;
+}
+.login__form {
+  width: 30%;
+  position: relative;
+  background-color: #fff;
+  padding: 3rem;
+  padding-bottom: 8rem;
 }
