--- a/src/index.css
+++ b/src/index.css
@@ -637,12 +637,13 @@ textarea:focus {
   color: #9C66FF;
 }
 .login {
-  position: fixed;
+  /*position: fixed;
   top: 0;
-  display: flex;
+  background-color: rgba(0, 0, 0, 0.7);*/
+  margin: 3rem auto;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
   justify-content: center;
   align-items: center;
 }
