book overview from db

--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ textarea:focus {
 }
 .link--simple {
   margin: 0 0.5rem;
-  color: #fff;
+  color: #fff!important;
   text-decoration: none;
   background-color: #ffc666;
   padding: 8px 15px;
@@ -272,6 +272,7 @@ textarea:focus {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  color: black;
 }
 
 .book__details .details--title {
