--- a/src/index.css
+++ b/src/index.css
@@ -253,9 +253,9 @@ textarea:focus {
 
 .book__cover {
   display: block;
-  width: 75%;
-  height: 80%;
-  margin: 10% auto;
+  width: 225px;
+  height: 300px;
+  margin: 30px;
   background-position: center;
   background-size: cover;
 }
@@ -273,6 +273,7 @@ textarea:focus {
   white-space: nowrap;
   text-overflow: ellipsis;
   color: black;
+  width: 225px;
 }
 
 .book__details .details--title {
