--- a/src/index.css
+++ b/src/index.css
@@ -243,6 +243,7 @@ textarea:focus {
   opacity: 0.5;
   font-size: 1.4rem;
   line-height: 1.8rem;
+
 }
 .book__details p {
   overflow: hidden;
@@ -387,19 +388,20 @@ textarea:focus {
  */
 
 .book-overview {
-  position: fixed;
-  top: 0;
+  /*position: fixed;*/
+  /*top: 0;*/
   display: flex;
+  margin-top: 50px;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
+  /*background-color: rgba(0, 0, 0, 0.7);*/
   justify-content: center;
   align-items: center;
 }
 .overview__thumbnails .thumb {
   display: block;
-  width: 600px;
-  height: 900px;
+  width: 500px;
+  height: 800px;
   background-color: #eee;
   background-image: url('./assets/img/books/3.jpg');
   background-position: center;
@@ -408,12 +410,13 @@ textarea:focus {
 .overview__details {
   display: flex;
   flex-direction: column;
-  width: 400px;
-  height: 800px;
-  padding: 50px;
+  width: 600px;
+  height: 700px;
+  padding: 50px 100px;
   background-color: #fff;
   overflow-y:auto;
   overflow-x: hidden;
+  position: relative;
 }
 .overview__details .details__title {
   margin-bottom: 0.5rem;
@@ -481,6 +484,30 @@ textarea:focus {
 }
 .overview__details .details__comments {
   margin-top: 2rem;
+}
+.button-back {
+  height: 50px;
+  border: 1px solid #eee;
+  cursor: pointer;
+  border-radius: 10px;
+  background-color: white;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  opacity: 0.5;
+  outline: none;
+}
+.button-back i {
+  display: inline-block;
+  background-image: url('./assets/img/back.png');
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 40px;
+  height: 40px;
+}
+.button-back:hover {
+  opacity: 1;
 }
 
 /**
