--- a/src/index.css
+++ b/src/index.css
@@ -583,6 +583,13 @@ textarea:focus {
   border-radius: 3px;
   font-size: 1rem;
 }
+.form__input.input--error {
+  box-shadow: 0 0 8px 0px rgba(255, 0, 0, 0.75);
+}
+/*.form__input.input--error::after {
+  content: "Invalid value";
+  width: auto;
+}*/
 .form__input.input--file {
   display: none;
 }
