--- a/src/index.css
+++ b/src/index.css
@@ -78,9 +78,10 @@ textarea:focus {
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: 0;
   margin-top: 20px;
   padding: 3rem 0;
-  transition: opacity 0.5s ease-in-out;
+  transition: opacity 0.4s ease-in, height 0.4s ease-in;
   pointer-events: none;
   opacity: 0;
   border: 1px solid rgba(0, 0, 0, .0975);
@@ -90,6 +91,7 @@ textarea:focus {
 .dropdown__utils.utils--visible {
   pointer-events: all;
   opacity: 1;
+  height: 200px;
 }
 .dropdown .search-box {
   margin: 0;
@@ -368,6 +370,9 @@ textarea:focus {
 @media screen and (max-width: 860px) {
   .book-list {
     width: 100%;
+  }
+  .book-list__header {
+    text-align: center;
   }
 }
 .book-list__cards {
