--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ textarea:focus {
   z-index: 200;
   display: flex;
   flex-direction: row;
-  padding: 20px 10%;
+  padding: 20px 8%;
   border-bottom: 1px solid rgba(0, 0, 0, .0975);
   background-color: white;
   align-items: center;
@@ -515,6 +515,50 @@ textarea:focus {
 }
 .button-back:hover {
   opacity: 1;
+}
+
+@media screen and (max-width: 1200px) {
+  .details__list {
+    display: flex;
+    flex-direction: column;
+  }
+  .details__list .details__action,
+  .details__list .details__price {
+    margin: 0.5rem;
+    display: block;
+  }
+
+  .book-overview {
+    flex-direction: column;
+    margin-top: 5%;
+  }
+
+  .overview__thumbnails .thumb {
+    width: 550px;
+  }
+
+  .overview__details {
+    width: 450px;
+    padding: 50px;
+    height: auto;
+    margin-bottom: 50px;
+  }
+
+  .button-back {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .overview__thumbnails .thumb {
+    max-width: 90vw;
+    max-height: 78vh;
+  }
+
+  .overview__details {
+    max-width: 80vw;
+    padding: 5vw;
+  }
 }
 
 /**
