--- a/src/index.css
+++ b/src/index.css
@@ -594,6 +594,15 @@ textarea:focus {
   font-size: 0.9rem;
   line-height: 1rem;
 }
+/**
+ *  Forms
+ */
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 /**
  * Register Component
@@ -607,13 +616,6 @@ textarea:focus {
   padding: 2rem;
   padding-bottom: 6rem;
   position: relative;
-}
-.admin__form,
-.register__form,
-.login__form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 .form__header {
   font-size: 2rem;
@@ -685,10 +687,17 @@ textarea:focus {
 .form__text {
   margin-top: 1rem;
   opacity: 0.8;
+  text-align: center;
 }
 .form__text a {
   color: #9C66FF;
   cursor: pointer;
+}
+
+@media screen and (max-width: 860px) {
+  .form__input {
+    width: 80%;
+  }
 }
 .login {
   /*position: fixed;
@@ -708,6 +717,18 @@ textarea:focus {
   background-color: #fff;
   padding: 3rem;
   padding-bottom: 8rem;
+}
+
+@media screen and (max-width: 860px) {
+  .login,
+  .register {
+    width: 85%;
+  }
+  .login__form,
+  .register__form {
+    width: 100%;
+    min-width: auto;
+  }
 }
 
 /**
@@ -792,6 +813,12 @@ textarea:focus {
 }
 .admin .form--edit label {
   margin-right: 1rem;
+}
+
+@media screen and (max-width: 860px) {
+  .admin {
+    margin: 2rem auto;
+  }
 }
 
 
