--- a/src/index.css
+++ b/src/index.css
@@ -616,6 +616,14 @@ textarea:focus {
   align-items: center;
 }
 
+.admin__form,
+.register__form,
+.login__form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 /**
  * Register Component
  */
