--- a/src/index.css
+++ b/src/index.css
@@ -872,12 +872,19 @@ textarea:focus {
 
 .admin-card {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   margin: 1rem auto;
   justify-content: space-between;
   width: 80%;
   padding: 20px 0;
   border-bottom: 1px solid #b0b0b0;
 }
+
+.admin-card > * {
+  margin: .2rem;
+}
+
 .card__text {
   font-size: 1.2rem;
   opacity:
@@ -934,7 +941,7 @@ textarea:focus {
 }
 
 .admin-orders_action {
-  min-width: 60vw;
+  min-width: 70vw;
 }
 
 .admin-orders__order-selection {
